Remove static contact info from contact section

--- a/index.html
+++ b/index.html
@@ -223,22 +223,7 @@
             success.
           </span>
         </h2>
-        <div class="contact__info">
-          <p>London, UK</p>
-          <p>
-            <a href="https://linkedin.com/in/davale/" target="_blank" rel="noreferrer"
-              >linkedin.com/in/davale/</a
-            >
-          </p>
-          <p>
-            <a href="https://github.com/davalework" target="_blank" rel="noreferrer"
-              >github.com/davalework</a
-            >
-          </p>
-          <p>
-            <a href="mailto:davalework@outlook.com">davalework@outlook.com</a>
-          </p>
-        </div>
+        <!-- Removed contact information left column -->
         <div class="contact__form-container">
           <form action="#" class="contact__form">
             <div class="contact__form-field">
