--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="./assets/png/david-a.png"
               alt="David Adewale Logo Image"
               class="header__logo-img"
             />
@@ -189,7 +189,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/macbook-dashboard.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
