--- a/project-1.html
+++ b/project-1.html
@@ -87,8 +87,7 @@
         <h1 class="heading-primary">Spotify vs. Apple Music</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Comparing the titans of music streaming by revenue, users, premium
-            conversion, and geography.
+            Comparing the Titans of Music Streaming | Tableau
           </p>
         </div>
       </div>
@@ -98,7 +97,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
+              src="./assets/jpeg/spotAppleDash.jpeg"
               alt="Project Image"
               class="project-details__showcase-img"
             />
