--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hi, I’m David</h1>
+        <h1 class="heading-primary">Hi, I’m David Adewale</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             SQL, Python, Power BI, Tableau, and Excel are my tools to unlock
@@ -136,8 +136,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            I turn messy data into clear, actionable stories—blending business
-            analysis, analytics, and design to drive smarter decisions.
+            I turn messy data into clear, actionable stories. <p>Blending business
+            analysis, analytics, and design to drive smarter decisions.</p>
           </span>
         </h2>
         <div class="about__content">
@@ -145,7 +145,7 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                Hey! I’m <strong>David Adewale</strong>, a data analyst with an
+                Hey! I’m David, a data analyst with an
                 entrepreneurial streak. I studied Business Computing
                 (Entrepreneurship) at Goldsmiths, University of London and hold
                 BCS Business Analysis Foundation, BCS Data Foundations, and
@@ -170,6 +170,12 @@
               <div class="skills__skill">Python</div>
               <div class="skills__skill">Tableau</div>
               <div class="skills__skill">Power BI</div>
+              <div class="skills__skill">ETL/ELT</div>
+              <div class="skills__skill">Data Modeling</div>
+              <div class="skills__skill">Statistics</div>
+              <div class="skills__skill">Testing</div>
+              <div class="skills__skill">Cloud Analytics</div>
+              
             </div>
           </div>
         </div>
@@ -180,8 +186,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Projects highlighting data prep, quality, analysis, and clear
-            storytelling.
+<!--             What I've been working on. -->
           </span>
         </h2>
 
@@ -200,14 +205,13 @@
                 Spotify vs. Apple Music
               </h3>
               <p class="projects__row-content-desc">
-                Comparing the titans of music streaming by revenue, users,
-                premium conversion, and geography.
+                Comparing the titans of music streaming | Tableau
               </p>
               <a
                 href="./project-1.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Open</a
               >
             </div>
           </div>
