--- a/project-1.html
+++ b/project-1.html
@@ -190,7 +190,7 @@
               <p class="project-details__desc-para">
                 Growth isn’t cheap. Spotify’s annual income loss fluctuated
                 dramatically over the decade, bottoming out at –$1.24&nbsp;billion
-                in 2017 and rising to a $1.14&nbsp;billion loss in 2024.
+                in 2017 and rising to a $1.14&nbsp;billion in 2024.
               </p>
 
               <h3 class="project-details__content-title">Conclusion</h3>
@@ -216,6 +216,13 @@
                 <div class="skills__skill">Storytelling</div>
               </div>
             </div>
+            <div class="project-details__showcase-img-cont">
+            <img
+              src="./assets/jpeg/spotAppleDash.jpeg"
+              alt="Project Image"
+              class="project-details__showcase-img"
+            />
+          </div>
             <div class="project-details__links">
               <a
                 href="https://github.com/muskan0830/Youtube-Vs-Netflix-Tableau/tree/main"
