--- a/project-1.html
+++ b/project-1.html
@@ -231,6 +231,12 @@
                 >View the Code</a
               >
             </div>
+            <div class="skills">
+                <div class="skills__skill">Data analysis</div>
+                <div class="skills__skill">Visualisation</div>
+                <div class="skills__skill">Storytelling</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
