--- a/project-1.html
+++ b/project-1.html
@@ -208,14 +208,14 @@
                 analysis, visualisation and storytelling.
               </p>
             </div>
-            <div class="project-details__tools-used">
+<!--             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Key Skills</h3>
               <div class="skills">
                 <div class="skills__skill">Data analysis</div>
                 <div class="skills__skill">Visualisation</div>
                 <div class="skills__skill">Storytelling</div>
               </div>
-            </div>
+            </div> -->
             <div class="project-details__showcase-img-cont">
             <img
               src="./assets/jpeg/spotAppleDash.jpeg"
@@ -228,14 +228,16 @@
                 href="https://github.com/muskan0830/Youtube-Vs-Netflix-Tableau/tree/main"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-                >View the Code</a
-              >
+                >View the Code</a>
             </div>
-            <div class="skills">
+            <div class="project-details__tools-used">
+              <h3 class="project-details__content-title">Key Skills</h3>
+              <div class="skills">
                 <div class="skills__skill">Data analysis</div>
                 <div class="skills__skill">Visualisation</div>
                 <div class="skills__skill">Storytelling</div>
               </div>
+            </div>
             </div>
           </div>
         </div>
