--- a/project-1.html
+++ b/project-1.html
@@ -276,12 +276,12 @@
           </div>
         </div>
 
-        <div class="main-footer__lower">
+<!--         <div class="main-footer__lower">
           &copy; Copyright 2021. Made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
             >Ram Maheshwari</a
           >
-        </div>
+        </div> -->
       </div>
     </footer>
     <script src="./index.js"></script>
