--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
         <div class="home-hero__info">
           <p class="text-primary">
             SQL, Python, Power BI, Tableau, and Excel are my tools to unlock
-            the hidden stories within your data. I transform complex data into
-            insights that turn confusion into clarity. Ready to explore more?
-            Let’s go!
+            the hidden stories within your data. <p>I transform complex data into
+            insights that turn confusion into clarity. Ready to explore more?</p>
           </p>
         </div>
         <div class="home-hero__cta">
