--- a/project-1.html
+++ b/project-1.html
@@ -95,13 +95,13 @@
     <section class="project-details">
       <div class="main-container">
         <div class="project-details__content">
-          <div class="project-details__showcase-img-cont">
+<!--           <div class="project-details__showcase-img-cont">
             <img
               src="./assets/jpeg/spotAppleDash.jpeg"
               alt="Project Image"
               class="project-details__showcase-img"
             />
-          </div>
+          </div> -->
           <div class="project-details__content-main">
             <div class="project-details__desc">
               <h3 class="project-details__content-title">
