--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
         <h1 class="heading-primary">Hi, I’m David Adewale</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            SQL, Python, Power BI, Tableau, and Excel are my tools to unlock
-            the hidden stories within your data. <p>I transform complex data into
-            insights that turn confusion into clarity. Ready to explore more?</p>
+            I turn messy data into clear decisions with SQL, Excel, and Tableau.
           </p>
         </div>
         <div class="home-hero__cta">
