--- a/project-1.html
+++ b/project-1.html
@@ -104,9 +104,9 @@
           </div> -->
           <div class="project-details__content-main">
             <div class="project-details__desc">
-              <h3 class="project-details__content-title">
+<!--               <h3 class="project-details__content-title">
                 Spotify vs. Apple Music: Comparing the Titans of Music Streaming
-              </h3>
+              </h3> -->
               <p class="project-details__desc-para">
                 Music has gone digital, and two services have come to define how
                 we listen: Spotify and Apple Music. These two heavyweights are
